--- a/css/about_style.css
+++ b/css/about_style.css
@@ -1,7 +1,7 @@
 
 
 .loading{
-    background-color: rgb(105, 63, 0);
+    background-color: rgb(0, 0, 0);
     height: 100vh;
     width: 100%;
     position: fixed;
@@ -24,7 +24,7 @@
     width: 100%;
     height: 100%;
     border-radius: 50%;
-    background-color: #8E7754;
+    background-color: #ffffff;
     opacity: 0.6;
     position: absolute;
     top: 0;
@@ -60,11 +60,10 @@
 
 
 .about{
-    background-image: url(../imges/b2.jpg);
+    background-image: url(../imges/drew-coffman-1872.jpg);
     background-size:cover;
     background-position: center center;
     background-repeat: no-repeat;
-    height: 40vh;
 }
 
 
