--- a/css/gallery_style.css
+++ b/css/gallery_style.css
@@ -1,156 +1,91 @@
 
-.gallery{
-    background-color: rgba(248,248,248,255);
-    height: 40vh;
+
+.loading{
+  background-color: rgb(0, 0, 0);
+  height: 100vh;
+  width: 100%;
+  position: fixed;
+  left: 0;
+  top: 0;
+  z-index: 10000;
+  display:flex;
+  align-items: center;
 }
 
-.first{
-    padding: 0px 60px;
-    padding-top: 80px;
-    overflow: auto;
+.spinner {
+  width: 50px;
+  height: 50px;
+
+  position: relative;
+  margin: 100px auto;
 }
-.first .contanier{
-    width: 33.3333333333%;
-    float: left;
-    position: relative;
-    border-left: 5px solid white;
-    border-right: 5px solid white;
-    overflow: hidden;
+
+.double-bounce1, .double-bounce2 {
+  width: 100%;
+  height: 100%;
+  border-radius: 50%;
+  background-color: #ffffff;
+  opacity: 0.6;
+  position: absolute;
+  top: 0;
+  left: 0;
+  
+  -webkit-animation: sk-bounce 2.0s infinite ease-in-out;
+  animation: sk-bounce 2.0s infinite ease-in-out;
+}
+
+.double-bounce2 {
+  -webkit-animation-delay: -1.0s;
+  animation-delay: -1.0s;
+}
+
+@-webkit-keyframes sk-bounce {
+  0%, 100% { -webkit-transform: scale(0.0) }
+  50% { -webkit-transform: scale(1.0) }
+}
+
+@keyframes sk-bounce {
+  0%, 100% { 
+    transform: scale(0.0);
+    -webkit-transform: scale(0.0);
+  } 50% { 
+    transform: scale(1.0);
+    -webkit-transform: scale(1.0);
+  }
 }
 
 
-.first .pic img{
-    height: 55%;
-    width: 100%;
-    transition: transform 1s;
+
+.grayBG{
+    background-color: #F8F8F8;
 }
-.first .contanier .caption{
-    position: absolute;
-    top: 0;
+
+.overlay{
+    top: 0%;
     left: 100%;
-    background-color: rgba(133, 64, 0, 0.50);
-    text-align: center;
-    transition: right 1s;
-    width: 100%;
-    height: 100%;
-    transition: left 1s , transform 1s;
+    transition: left 0.8s , transform 0.5s;
+    background-color: rgba(214, 104, 0, 0.568);
 }
-.first .contanier h2{
+
+.overlay h2{
+    left: 150%;
+    transition: left 0.8s 0.3s;
     position: relative;
-    left: 120%;
-    padding: 10px 0px;
-    background-color: rgba(142,119,85,255);
-    font-family: 'Alegreya', serif;
-    font-family: 'Alegreya Sans', sans-serif;
-    font-size: 30px;
-    line-height: 50px;
-    font-weight: 400;
-    color: white;
-    transition:  left 2s;
-}
-.first .contanier p{
-    position: relative;
-    left: 130%;
-    font-family: 'Alegreya Sans', sans-serif;
-    font-size: 18px;
-    line-height: 35px;
-    font-weight: 400;
-    color: rgb(255, 255, 255);
-    margin-top: 30px;
-    transition:  left 2s 0.4s;
+    background-color: rgb(99, 59, 0);
 }
 
 
- 
-.first .contanier:hover .caption {
-    left: 0%;
+.galleryContent:hover .overlay{
+
     transform: rotate(360deg);
+    left: 0%;    
+
 }
 
-.first .contanier:hover .caption h2{
+.galleryContent:hover .overlay h2{
+
     left: 0%;
-}
 
-.first .contanier:hover .caption p{
-    left: 0%;
-}
-.first .contanier:hover .pic img{
-    transform: scale(1.2);
-}
-
-.second{
-    padding: 0px 60px;
-    padding-top: 10px;
-    padding-bottom: 80px;
-    overflow: auto;
-}
-.second .contanier{
-    width: 33.3333333333%;
-    float: left;
-    position: relative;
-    border-left: 5px solid white;
-    border-right: 5px solid white;
-    overflow: hidden;
-}
-
-
-.second .pic img{
-    height: 55%;
-    width: 100%;
-    transition: transform 1s;
-}
-.second .contanier .caption{
-    position: absolute;
-    top: 0;
-    left: 100%;
-    background-color: rgba(133, 64, 0, 0.50);
-    text-align: center;
-    transition: right 1s;
-    width: 100%;
-    height: 100%;
-    transition: left 1s , transform 1s;
-}
-.second .contanier h2{
-    position: relative;
-    left: 120%;
-    padding: 10px 0px;
-    background-color: rgba(142,119,85,255);
-    font-family: 'Alegreya', serif;
-    font-family: 'Alegreya Sans', sans-serif;
-    font-size: 30px;
-    line-height: 50px;
-    font-weight: 400;
-    color: white;
-    transition:  left 2s;
-}
-.second .contanier p{
-    position: relative;
-    left: 130%;
-    font-family: 'Alegreya Sans', sans-serif;
-    font-size: 18px;
-    line-height: 35px;
-    font-weight: 400;
-    color: rgb(255, 255, 255);
-    margin-top: 30px;
-    transition:  left 2s 0.4s;
-}
-
-
- 
-.second .contanier:hover .caption {
-    left: 0%;
-    transform: rotate(360deg);
-}
-
-.second .contanier:hover .caption h2{
-    left: 0%;
-}
-
-.second .contanier:hover .caption p{
-    left: 0%;
-}
-.second .contanier:hover .pic img{
-    transform: scale(1.2);
 }
 
 .detalisBG{
